# swarm

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: compile.yml
assets/: installer.iss
src/: cli.rs  constants.rs  context.rs  lib.rs  main.rs
src/app/: dispatcher.rs  ipc.rs  message.rs  mod.rs  runtime.rs  state.rs
src/app/handler/: app.rs  copy.rs  filter.rs  index.rs  mod.rs  options.rs  render.rs  search.rs  session.rs  skeleton.rs  tree.rs  tree_gen.rs
src/app/state/: mod.rs  search.rs  session.rs  tree.rs  ui.rs
src/model/: error.rs  mod.rs  node.rs  options.rs  output.rs  path.rs
src/services/: mod.rs
src/services/filesystem/: filter.rs  gather.rs  git.rs  mod.rs
src/services/filesystem/index/: builder.rs  cleaner.rs  command.rs  file.rs  finalizer.rs  index.rs  mod.rs  progress.rs  result.rs  service.rs  session.rs  statistics.rs  stats.rs  switcher.rs  walker.rs  worker.rs
src/services/skeleton/: generator.rs  language.rs  mod.rs
src/services/tree/: filter.rs  format.rs  generator.rs  loader.rs  mod.rs  operations.rs  traversal.rs
src/services/worker/: background.rs  background_loader.rs  core.rs  filter.rs  mod.rs  session.rs  task.rs  tree.rs
src/services/worker/session/: command.rs  loader.rs  mod.rs  result.rs
src/services/worker/task/: command.rs  event.rs  executor.rs  mod.rs  result.rs
src/services/worker/tree/: command.rs  loader.rs  mod.rs  result.rs  status.rs
src/ui/: mod.rs  view.rs
src/ui/panel/: bottom.rs  central.rs  menu.rs  mod.rs
src/ui/themes/: catppuccin.rs  dracula.rs  gruvbox.rs  mod.rs  nord.rs  one_dark.rs  rose_pine.rs  tokyo_night.rs
src/ui/widget/: dialog.rs  mod.rs  toast.rs
src/ui/widget/titlebar/: icon.rs  titlebar.rs
src/ui/window/: about.rs  mod.rs  options.rs
