[package]
name = "swarm"
version = "0.1.0"
edition = "2024"

[dependencies]
copypasta = "0.10.2"
dirs = "6.0.0"
dunce = "1.0.5"
egui = "0.33.0"
eframe = "0.33.0"
globset = "0.4.16"
humansize = "2.1.3"
ignore = "0.4.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rfd = "0.15.4"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# strip = true
# panic = "abort"
