[package]
name = "swarm"
version = "0.0.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
copypasta = "0.10.2"
dirs = "6.0.0"
dunce = "1.0.5"
egui = "0.33.0"
eframe = "0.33.0"
git2 = "0.20.3"
globset = "0.4.16"
humansize = "2.1.3"
image = { version = "0.25.9", default-features = false, features = ["ico", "png"] }
ignore = "0.4.23"
single-instance = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rfd = "0.15.4"
toml = "0.9.8"
tree-sitter = "0.26.5"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-zig = "1.1.2"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
winres = "0.1.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase", "windef", "wincon", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "swarm-gui"
path = "src/main.rs"

[[bin]]
name = "swarm-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "swarm-full"
path = "src/bin/full.rs"
